# chitchat-rs

./: .gitignore  .gp.md  Cargo.toml
src/: bar.rs  button.rs  chat.rs  chat_client.rs  contacts.rs  layout.rs  main.rs  render.rs  text.rs
