[package]
name = "chitchat-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["ttf"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
